--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = https://github.com/versatica/libmediasoupclient.git
 [submodule "deps/libsdptransform"]
 	path = deps/libsdptransform
-	url = https://github.com/ibc/libsdptransform.git
+url=https://github.com/ouxianghui/libsdptransform.git
 [submodule "deps/asio"]
 	path = deps/asio
 	url = https://github.com/chriskohlhoff/asio.git
