add network module

--- a/RoomClient/RoomClient.vcxproj
+++ b/RoomClient/RoomClient.vcxproj
@@ -31,6 +31,13 @@
     <ClCompile Include="..\deps\libsdptransform\src\writer.cpp" />
     <ClCompile Include="logger\rtc_log_sink.cpp" />
     <ClCompile Include="logger\spd_logger.cpp" />
+    <ClCompile Include="network\network_http_client.cpp" />
+    <ClCompile Include="network\network_request_consumer.cpp" />
+    <ClCompile Include="network\network_request_executor.cpp" />
+    <ClCompile Include="network\network_request_manager.cpp" />
+    <ClCompile Include="network\network_request_plugin.cpp" />
+    <ClCompile Include="network\network_request_task.cpp" />
+    <ClCompile Include="network\network_status_detector.cpp" />
     <ClCompile Include="opengl\i420_texture_cache.cpp" />
     <ClCompile Include="opengl\video_shader.cpp" />
     <ClCompile Include="service\broadcaster.cpp" />
@@ -79,13 +86,22 @@
     <ClInclude Include="..\deps\libsdptransform\include\sdptransform.hpp" />
     <ClInclude Include="logger\rtc_log_sink.h" />
     <ClInclude Include="logger\spd_logger.h" />
+    <ClInclude Include="network\i_network_request_manager.h" />
+    <ClInclude Include="network\network.hpp" />
+    <ClInclude Include="network\network_http_client.h" />
+    <ClInclude Include="network\network_request_builder.h" />
+    <ClInclude Include="network\network_request_consumer.h" />
+    <ClInclude Include="network\network_request_executor.h" />
+    <ClInclude Include="network\network_request_manager.h" />
+    <ClInclude Include="network\network_request_plugin.h" />
+    <ClInclude Include="network\network_request_task.h" />
+    <ClInclude Include="network\network_status_detector.h" />
     <ClInclude Include="opengl\gl_defines.h" />
     <ClInclude Include="opengl\i420_texture_cache.h" />
     <ClInclude Include="opengl\video_shader.h" />
     <ClInclude Include="service\broadcaster.hpp" />
     <ClInclude Include="service\component_factory.h" />
     <ClInclude Include="service\engine.h" />
-    <ClInclude Include="service\i_component_factory.h" />
     <ClInclude Include="service\i_engine_event_handler.h" />
     <ClInclude Include="service\i_mediasoup_api.h" />
     <ClInclude Include="service\i_media_controller.h" />
@@ -96,7 +112,6 @@
     <ClInclude Include="service\i_room_client.h" />
     <ClInclude Include="service\i_room_client_observer.h" />
     <ClInclude Include="service\i_service.hpp" />
-    <ClInclude Include="service\i_service_factory.hpp" />
     <ClInclude Include="service\i_signaling_client.h" />
     <ClInclude Include="service\i_signaling_observer.h" />
     <ClInclude Include="service\mediasoup_api.h" />
